# progko

./: .gitignore  CMakeLists.txt  README.md  test.sh
src/: core.cpp  core.h  core_cv2.cpp  core_cv2.h  core_mpi.cpp  core_mpi.h  core_mpi_omp.cpp  core_mpi_omp.h  core_omp.cpp  core_omp.h  core_omp_mpi.cpp  core_omp_mpi.h  core_plain.cpp  core_plain.h  helper.cpp  helper.h  main.cpp
